--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
-  "private": "false",
   "keywords": [
     "React",
     "Component",
@@ -14,7 +13,11 @@
   "files": [
     "dist"
   ],
-  "homepage": "",
+  "homepage": "https://github.com/xyj626553989/sign-design.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xyj626553989/sign-design.git"
+  },
   "author": "xiongyongjiang",
   "license": "MIT",
   "scripts": {
@@ -30,11 +33,12 @@
     "test": "jest",
     "clean": "rimraf dist",
     "ts-build": "tsc -p tsconfig.build.json",
-    "css-build": "node-sass ./src/styles/index.scss ./dist/index.css"
+    "css-build": "node-sass ./src/styles/index.scss ./dist/index.css",
+    "prepublish": "npm run test && npm run lint && npm run build"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
+      "pre-commit": "npm run test && lint-staged",
       "commit-msg": "commitlint --config .commitlintrc.js -E HUSKY_GIT_PARAMS"
     }
   },
@@ -115,23 +119,23 @@
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.0.9"
-  },
-  "dependencies": {
+    "webpack-merge": "^5.0.9",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
     "@babel/runtime": "^7.10.5",
     "@babel/runtime-corejs3": "^7.10.5",
+    "react-hot-loader": "^4.12.21"
+  },
+  "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@types/classnames": "^2.2.10",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
     "@types/react-transition-group": "^4.4.0",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21",
     "react-transition-group": "^4.4.1"
   },
   "peerDependencies": {
